--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
+    "@reduxjs/toolkit": "^2.5.0",
     "clsx": "^2.1.1",
     "lottie-react": "^2.4.0",
     "next": "15.1.3",
@@ -23,6 +24,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-rating": "^2.0.5",
+    "react-redux": "^9.2.0",
     "sass": "^1.83.1"
   },
   "devDependencies": {
