--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@lottiefiles/dotlottie-react": "^0.12.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-checkbox": "^1.1.3",
@@ -25,7 +26,8 @@
     "react-hook-form": "^7.54.2",
     "react-rating": "^2.0.5",
     "react-redux": "^9.2.0",
-    "sass": "^1.83.1"
+    "sass": "^1.83.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
