--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-select": "^2.1.4",
     "@reduxjs/toolkit": "^2.5.0",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "next": "15.1.3",
     "react": "^19.0.0",
