--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
     "@reduxjs/toolkit": "^2.5.0",
     "clsx": "^2.1.1",
     "i18next": "^24.2.2",
-    "i18next-browser-languagedetector": "^8.0.2",
-    "i18next-http-backend": "^3.0.2",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "next": "15.1.3",
+    "next-i18next": "^15.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
