--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lottie-react": "^2.4.0",
     "next": "15.1.3",
     "next-i18next": "^15.4.1",
+    "next-intl": "^3.26.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
